<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/gotodasboard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="go back to user_dashboard"
            android:paddingLeft="20dp"
            android:paddingTop="18dp"
            android:src="@drawable/ic_home" />


        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSuccessMessage"
            android:text="Event Name"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            tools:ignore="NotSibling" />

        <TextView
            android:id="@+id/tvEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_event_name"
            android:text="Date: TBD"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvEventStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventDate"
            android:text="From: TBD"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvEventEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventStartTime"
            android:text="To: TBD"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventEndTime"
            android:text="Location: TBD"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventLocation"
            android:text="Event Description: TBD"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />


        <ImageView
            android:id="@+id/iv_event_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/tvMaxAttendees"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_placeholder_background"
            android:layout_marginTop="10dp"
            android:contentDescription="event_poster" />

        <ImageView
            android:id="@+id/ivCheckInQRCode"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/iv_event_poster"
            android:layout_alignStart="@id/iv_event_poster"
            android:layout_marginTop="10dp"
            android:src="@drawable/image_placeholder_background"
            android:contentDescription="qr code" />

        <ImageView
            android:id="@+id/ivPromotionQRCode"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/iv_event_poster"
            android:layout_alignEnd="@id/iv_event_poster"
            android:layout_marginTop="10dp"
            android:src="@drawable/image_placeholder_background"
            android:contentDescription="promotion_qr_code" />

        <TextView
            android:id="@+id/tvCheckInQRLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivCheckInQRCode"
            android:layout_alignStart="@id/ivCheckInQRCode"
            android:text="CHECK-IN"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvPromotionQRLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivPromotionQRCode"
            android:layout_alignEnd="@id/ivPromotionQRCode"
            android:text="PROMOTION"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvMaxAttendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventDescription"
            android:text="Max Attendees: TBD"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPromotionQRLabel"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCheckIn"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Check In" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>