<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    tools:context=".BrowseHostedEvents">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your Hosted Events"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/turqoise"
        android:padding="16dp"/>

    <ImageButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingLeft="14dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="go back to previous page"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"/>

    <ListView
        android:id="@+id/lvEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>