...
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_app_name" />

    <Button
        android:id="@+id/button_get_started"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFAE42"
        android:elevation="8dp"
        android:text="Get Started!"
...
