...
                android:backgroundTint="@color/amber"
                android:text="My Signed Up Events"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/browseEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mySignedUpEvents"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/amber"
                android:text="Browse Events"
...
