<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event Details"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/turqoise"
        android:padding="16dp"/>

    <ImageButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingLeft="14dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="go back to previous page"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/tvEventNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:paddingLeft="14dp"
        android:text="Event Name: *"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEventNameLabel"
        android:paddingLeft="14dp"
        android:inputType="text"
        android:hint="Type here..."/>

    <TextView
        android:id="@+id/tvSetDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEventName"
        android:paddingLeft="14dp"
        android:text="Set Date: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSetDateLabel"
        android:paddingLeft="14dp"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSetDateLabel"
        android:paddingLeft="14dp"
        android:layout_toEndOf="@id/spinnerDay"/>

    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSetDateLabel"
        android:paddingLeft="14dp"
        android:layout_toEndOf="@id/spinnerMonth"/>

    <TextView
        android:id="@+id/tvScheduledTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerDay"
        android:paddingLeft="14dp"
        android:text="Scheduled Time: *"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvFromTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvScheduledTimeLabel"
        android:paddingLeft="14dp"
        android:text="From"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerFromHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFromTimeLabel"
        android:paddingLeft="14dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvFromTimeSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFromTimeLabel"
        android:paddingLeft="14dp"
        android:text=":"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_toEndOf="@id/spinnerFromHour"/>

    <Spinner
        android:id="@+id/spinnerFromMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFromTimeLabel"
        android:paddingLeft="14dp"
        android:layout_toEndOf="@id/tvFromTimeSeparator"/>

    <Spinner
        android:id="@+id/fromAmPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFromTimeLabel"
        android:paddingLeft="14dp"
        android:layout_toEndOf="@id/spinnerFromMinute"/>

    <TextView
        android:id="@+id/tvToTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerFromMinute"
        android:paddingLeft="14dp"
        android:text="To"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerToHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvToTimeLabel"
        android:paddingLeft="14dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvToTimeSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvToTimeLabel"
        android:paddingLeft="14dp"
        android:text=":"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_toEndOf="@id/spinnerToHour"/>

    <Spinner
        android:id="@+id/spinnerToMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvToTimeLabel"
        android:paddingLeft="14dp"
        android:layout_toEndOf="@id/tvToTimeSeparator"/>

    <Spinner
        android:id="@+id/toAmPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvToTimeLabel"
        android:paddingLeft="14dp"
        android:layout_toEndOf="@id/spinnerToMinute"/>

    <TextView
        android:id="@+id/tvEventDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerToMinute"
        android:paddingLeft="14dp"
        android:text="Event Description:"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEventDescriptionLabel"
        android:paddingLeft="14dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:hint="Type here..."
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvMaxAttendeesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEventDescription"
        android:paddingLeft="14dp"
        android:text="Max Attendees:"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etMaxAttendees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMaxAttendeesLabel"
        android:paddingLeft="14dp"
        android:inputType="number"
        android:hint="Enter max attendees (optional)"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:backgroundTint="@color/amber"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</RelativeLayout>
